# Quote

./: .gitignore  README.md  setup.cfg
quote/: Utils.py  __init__.py  api.py  blog.py  categories.py  database.py  models.py  user.py
quote/static/css/: blog.css  create_post.css  dashboard.css  user.css
quote/static/fonts/material-design-iconic-font/css/: material-design-iconic-font.css
quote/static/js/: blog.js  create_post.js  edit_post.js  home.js  user.js
quote/templates/blog/: base.html  index.html  post.html  posts_by_category.html  posts_by_tag.html
quote/templates/user/: base.html  create_post.html  dashboard.html  edit_post.html  login.html  profile.html  register.html
