[metadata]
name = quote
version = 1.0.0
url = https://github.com/erfanghorbanee/Quote/

maintainer = Saeedahmadi
maintainer_email = saeedahmadi7714@gmail.com, s.yadollahzadeh@gmail.com, erfanghorbanee@gmail.com
description = A simple blog app using Flask, MongoDB and a little bit of JavaScript.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    mongoengine
    textblob


[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    quote
